Fix::Fixes layout issues related to search panel module

--- a/source/admin/install/extensions/mod_xiussearchpanel/css/mod_xiussearchpanel.css
+++ b/source/admin/install/extensions/mod_xiussearchpanel/css/mod_xiussearchpanel.css
@@ -15,7 +15,7 @@
 	border: 1px solid #e3e3e3;
     height: auto;
     padding: 6px;
-    width: 95%;
+    width: 98%;
 }
 
 .xiusMod_available .xius-margin{
